--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+	testImplementation group: 'junit', name: 'junit', version: '4.13-beta-2'
+	
 	implementation 'com.samczsun:skype4j:0.1.5'
 	implementation 'org.json:json:20160810'
 	implementation 'org.apache.commons:commons-lang3:3.5'
