--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.apache.commons:commons-lang3:3.5'
 	implementation 'org.jsoup:jsoup:1.7.2'
 	implementation 'com.squareup.okhttp:okhttp:2.7.5'
+	implementation 'org.telegram:telegrambots:4.1.2'
 }
 
 compileKotlin {
