--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,14 @@ plugins {
 	id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
 	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
+	id 'org.jetbrains.kotlin.plugin.noarg' version '1.3.21'
+	id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.21'
+	id 'org.jetbrains.kotlin.plugin.allopen' version '1.3.21'
+}
+
+allOpen {
+	annotation("javax.persistence.Entity")
+	annotation("javax.persistence.MappedSuperclass")
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -20,16 +28,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation group: 'junit', name: 'junit', version: '4.13-beta-2'
-	
+	testCompile ('org.springframework.boot:spring-boot-starter-test'){
+		exclude module: 'junit'
+	}
+	//testImplementation group: 'junit', name: 'junit', version: '4.13-beta-2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
 	implementation 'com.samczsun:skype4j:0.1.5'
 	implementation 'org.json:json:20160810'
 	implementation 'org.apache.commons:commons-lang3:3.5'
 	implementation 'org.jsoup:jsoup:1.7.2'
 	implementation 'com.squareup.okhttp:okhttp:2.7.5'
 	implementation 'org.telegram:telegrambots:4.1.2'
+
+	compile 'com.h2database:h2:1.3.164'
 }
 
 compileKotlin {
