--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
+	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 	id 'org.jetbrains.kotlin.plugin.noarg' version '1.3.21'
@@ -22,27 +22,34 @@ repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/snapshot' }
 	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://botbuilder.myget.org/F/botbuilder-v4-java-daily/maven/' }
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.6'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.9.6'
+
 	testCompile ('org.springframework.boot:spring-boot-starter-test'){
 		exclude module: 'junit'
 	}
-	//testImplementation group: 'junit', name: 'junit', version: '4.13-beta-2'
+	
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
-	implementation 'com.samczsun:skype4j:0.1.5'
-	implementation 'org.json:json:20160810'
 	implementation 'org.apache.commons:commons-lang3:3.5'
-	implementation 'org.jsoup:jsoup:1.7.2'
-	implementation 'com.squareup.okhttp:okhttp:2.7.5'
 	implementation 'org.telegram:telegrambots:4.1.2'
+	implementation 'com.google.guava:guava:27.1-jre'
+
+	compile group: 'com.microsoft.bot.schema', name: 'botbuilder-schema', version: '4.2.0-preview-56'
+	compile group: 'com.microsoft.bot.connector', name: 'bot-connector', version: '4.2.0-preview-42'
+	compile group: 'com.microsoft.bot.builder', name: 'botbuilder', version: '4.2.0-preview-42'
 
 	compile 'com.h2database:h2:1.3.164'
 }
